@@ -550,9 +550,13 @@ extern void		cob_gen_optim (const enum cb_optim);
 #define CB_PENDING(x)		cb_warning (_("%s is not implemented"), x)
 #define CB_PENDING_X(x,y)		cb_warning_x (x, _("%s is not implemented"), y)
 #define CB_UNFINISHED(x)		\
-	cb_warning (_("handling of %s is unfinished; implementation is likely to be changed"), x)
-#define CB_UNFINISHED_X(x,y)	\
-	cb_warning_x (x, _("handling of %s is unfinished; implementation is likely to be changed"), y)
+	do {if (cb_warn_unfinished) {\
+		cb_warning (_("handling of %s is unfinished; implementation is likely to be changed"), x);\
+	}} while (0)
+#define CB_UNFINISHED_X(x,y)		\
+	do {if (cb_warn_unfinished) {\
+		cb_warning_x (x, _("handling of %s is unfinished; implementation is likely to be changed"), y);\
+	}} while (0)
 
 extern size_t		cb_msg_style;
 
